{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 952,
  "lineage": "9adbedf4-b27e-251b-744a-7cf809eccc37",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523504186842:vpc/vpc-05531e870ea717241",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0c7bb1a8b55527f4f",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-04b9cf04c664c26e7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05531e870ea717241",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0da15b8ef4414baa3",
            "owner_id": "523504186842"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "studyoracle",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:523504186842:loadbalancer/app/studyoracle/cb045d3299808e26",
            "arn_suffix": "app/studyoracle/cb045d3299808e26",
            "desync_mitigation_mode": "defensive",
            "dns_name": "studyoracle-140613702.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:523504186842:loadbalancer/app/studyoracle/cb045d3299808e26",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "studyoracle",
            "preserve_host_header": false,
            "security_groups": [
              "sg-09dcec7bcaeceb7eb"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0730c48ab1d03b70b"
              },
              {
                "subnet_id": "subnet-0993e50cef7f473ab"
              }
            ],
            "subnets": [
              "subnet-0730c48ab1d03b70b",
              "subnet-0993e50cef7f473ab"
            ],
            "tags_all": {
              "Automation": "Terraform",
              "Name": "StudyOracle"
            },
            "vpc_id": "vpc-05531e870ea717241",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.studyoracle_lb",
            "data.aws_subnets.private",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "studyoracle_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:523504186842:listener/app/studyoracle/cb045d3299808e26/8fbf8cf1e8675d69",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:523504186842:targetgroup/studyoracleserver/8bc24e13c6a9e083",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:523504186842:listener/app/studyoracle/cb045d3299808e26/8fbf8cf1e8675d69",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:523504186842:loadbalancer/app/studyoracle/cb045d3299808e26",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Automation": "Terraform",
              "Name": "StudyOracle"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.studyoracle",
            "aws_lb_target_group.studyoracle_server",
            "aws_security_group.studyoracle",
            "aws_security_group.studyoracle_lb",
            "data.aws_subnets.private",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "studyoracle_server_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:523504186842:listener/app/studyoracle/cb045d3299808e26/4216d1ec1f0bb658",
            "certificate_arn": "arn:aws:acm:us-east-1:523504186842:certificate/95c3e5dc-42d3-4de9-8ab2-f9f0446d8dfa",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:523504186842:targetgroup/studyoracleserver/8bc24e13c6a9e083",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:523504186842:listener/app/studyoracle/cb045d3299808e26/4216d1ec1f0bb658",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:523504186842:loadbalancer/app/studyoracle/cb045d3299808e26",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {
              "Automation": "Terraform",
              "Name": "StudyOracle"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.studyoracle",
            "aws_lb_target_group.studyoracle_server",
            "aws_security_group.studyoracle",
            "aws_security_group.studyoracle_lb",
            "data.aws_acm_certificate.issued",
            "data.aws_subnets.private",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "studyoracle_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:523504186842:targetgroup/studyoracleserver/8bc24e13c6a9e083",
            "arn_suffix": "targetgroup/studyoracleserver/8bc24e13c6a9e083",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200",
                "path": "/api/v1/health",
                "port": "8080",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:523504186842:targetgroup/studyoracleserver/8bc24e13c6a9e083",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "studyoracleserver",
            "port": 8080,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Automation": "Terraform",
              "Name": "StudyOracle"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-05531e870ea717241"
          },
          "dependencies": [
            "aws_security_group.studyoracle"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523504186842:security-group/sg-09271a679eca107f2",
            "description": "Allow inbound Postgres traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09271a679eca107f2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "studyoracledb",
            "name_prefix": "",
            "owner_id": "523504186842",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Automation": "Terraform",
              "Name": "StudyOracle"
            },
            "timeouts": null,
            "vpc_id": "vpc-05531e870ea717241"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "studyoracle",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523504186842:security-group/sg-026dfa396a153b67b",
            "description": "studyoracle Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-026dfa396a153b67b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "studyoracle",
            "name_prefix": "",
            "owner_id": "523504186842",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Automation": "Terraform",
              "Name": "StudyOracle"
            },
            "timeouts": null,
            "vpc_id": "vpc-05531e870ea717241"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "studyoracle_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523504186842:security-group/sg-09dcec7bcaeceb7eb",
            "description": "studyoracle Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09dcec7bcaeceb7eb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "studyoraclelb",
            "name_prefix": "",
            "owner_id": "523504186842",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Automation": "Terraform",
              "Name": "StudyOracle"
            },
            "timeouts": null,
            "vpc_id": "vpc-05531e870ea717241"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}